--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "vue-cli-template",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.1.4"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+	"name": "vue-cli-template",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build"
+	},
+	"dependencies": {
+		"axios": "^1.1.3",
+		"core-js": "^3.8.3",
+		"jwt-decode": "^3.1.2",
+		"marked": "^4.2.2",
+		"util": "^0.12.5",
+		"vue": "^3.2.13",
+		"vue-class-component": "^8.0.0-0",
+		"vue-router": "^4.1.4",
+		"vuex": "^4.1.0"
+	},
+	"devDependencies": {
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/marked": "^4.0.7",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-typescript": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"sass": "^1.32.7",
+		"sass-loader": "^12.0.0",
+		"typescript": "~4.5.5"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not dead",
+		"not ie 11"
+	]
 }
