--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^1.1.3",
 		"core-js": "^3.8.3",
 		"jwt-decode": "^3.1.2",
+		"lodash-es": "^4.17.21",
 		"marked": "^4.2.2",
 		"util": "^0.12.5",
 		"vue": "^3.2.13",
@@ -19,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@types/jsonwebtoken": "^8.5.9",
+		"@types/lodash-es": "^4.17.6",
 		"@types/marked": "^4.0.7",
 		"@vue/cli-plugin-babel": "~5.0.0",
 		"@vue/cli-plugin-typescript": "~5.0.0",
