--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "esnext",
-		"module": "esnext",
+		"target": "es5",
+		"module": "es2015",
 		"strict": true,
 		"jsx": "preserve",
 		"moduleResolution": "node",
@@ -25,7 +25,8 @@
 		"src/**/*.tsx",
 		"src/**/*.vue",
 		"tests/**/*.ts",
-		"tests/**/*.tsx"
+		"tests/**/*.tsx",
+		"typings/lodash-es.d.ts"
 	],
 	"exclude": ["node_modules"]
 }
